#6684: toolbar buttons are now wrapping correctly in table.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@6304 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/mainui.css
+++ b/_source/skins/kama/mainui.css
@@ -54,11 +54,12 @@ span.cke_skin_kama
 
 .cke_skin_kama .cke_editor
 {
-/*
-	border: solid 1px #dcdcdc;
-*/
 	display: inline-table;
 	width: 100%;
+}
+.cke_skin_kama .cke_browser_webkit .cke_editor
+{
+	display: table;	/* #6684 */
 }
 
 .cke_skin_kama .ltr .cke_browser_ie iframe
